<?xml version='1.0' encoding='UTF-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.codegik.poc</groupId>
    <artifactId>graalvm-main-arguments</artifactId>
    <version>1.0</version>
    <properties>
        <native.maven.plugin.version>0.9.12</native.maven.plugin.version>
        <mainClass>com.codegik.poc.App</mainClass>
        <imageName>native</imageName>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>${native.maven.plugin.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <id>build-native</id>
                        <goals>
                            <goal>build</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                    <execution>
                        <id>test-native</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <phase>test</phase>
                    </execution>
                </executions>
                <configuration>
                    <fallback>false</fallback>
                    <buildArgs>
<!--                        <arg>-H:+ReportExceptionStackTraces</arg>-->
<!--                        <arg>-H:+TraceClassInitialization</arg>-->
<!--                        <arg>&#45;&#45;report-unsupported-elements-at-runtime</arg>-->
<!--                        <arg>&#45;&#45;allow-incomplete-classpath</arg>-->
                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.io=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.management/javax.management=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.desktop/sun.font=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/sun.reflect.generics.parser=ALL-UNNAMED</arg>
                        <arg>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.time=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.base/sun.util.calendar=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.base/sun.security.action=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.xml/jdk.xml.internal=ALL-UNNAMED</arg>
                    </buildArgs>
                    <agent>
                        <enabled>true</enabled>
                        <options>
                            <option>experimental-class-loader-support</option>
                        </options>
                    </agent>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>java-agent</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>${mainClass}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>native</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${project.build.directory}/${imageName}</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>2.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>26.0-jre</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>